--- a/files/main_style.css
+++ b/files/main_style.css
@@ -19,7 +19,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, body, html, p, blockquote, fields
  .wsite-header-section { height: 600px; }
  .wsite-header-section:not(.wsite-section-bg-color):before { content: ''; display: block; position: absolute; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.1); }
  .banner-wrap { position: relative; height: 100%; background: #000000; color: #ffffff; }
- .banner-wrap .container { padding: 80px 40px; text-align: center; }
+ .banner-wrap .container { padding: 190px 40px 80px; text-align: center; }
  .banner-wrap h2 { color: inherit; font-family: 'Cento', sans-serif; font-size: 58px; font-weight: 500; line-height: 1.15; margin: 15px auto; }
  .banner-wrap div.paragraph { color: inherit; font-family: 'Montserrat', sans-serif; font-size: 20px; font-weight: 500; line-height: 1.15; letter-spacing: 0.05em; margin: 15px auto; }
  .banner-wrap p { color: inherit; font-family: 'Montserrat', sans-serif; font-size: 20px; font-weight: 500; line-height: 1.15; letter-spacing: 0.05em; margin: 15px auto; }
@@ -176,7 +176,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, body, html, p, blockquote, fields
  .blog-button:hover { background-color: rgba(0,0,0,0.2); }
  .blog-button span { background: none; }
  @media screen and (max-width: 1600px) {
- .main-wrap .container { padding: 50px 30px; }
+ .main-wrap .container { padding: 100px 30px 50px; }
  .footer-wrap .wsite-footer { padding: 50px 30px; }
  .container, .wsite-footer { max-width: 1200px; }
  .wsite-header-section { height: 520px; }
